--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parashar",
-  "homepage": "http://anssshu.github.io/parashar",
+  "homepage": "http://anssshu.github.io/parashar/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
